@@ -1,0 +1,28 @@
+// This software is released into the Public Domain.  See copying.txt for details.
+package org.openstreetmap.osmosis.core.merge.v0_6;
+
+import org.openstreetmap.osmosis.core.pipeline.common.TaskConfiguration;
+import org.openstreetmap.osmosis.core.pipeline.common.TaskManager;
+import org.openstreetmap.osmosis.core.pipeline.common.TaskManagerFactory;
+import org.openstreetmap.osmosis.core.pipeline.v0_6.ChangeSinkChangeSourceManager;
+
+
+/**
+ * The task manager factory for a change simplifier.
+ * 
+ * @author Brett Henderson
+ */
+public class ChangeSimplifierFactory extends TaskManagerFactory {
+	
+	/**
+	 * {@inheritDoc}
+	 */
+	@Override
+	protected TaskManager createTaskManagerImpl(TaskConfiguration taskConfig) {
+		return new ChangeSinkChangeSourceManager(
+			taskConfig.getId(),
+			new ChangeSimplifier(),
+			taskConfig.getPipeArgs()
+		);
+	}
+}
